--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,39 @@
-# safe to ignore these all the time
-node_modules
-.env
-.vscode/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# ignore all .DS_Store files (mac specific)
-DS_Store
+## macOS Finder
+**/.DS_Store
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
