--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 8000",
-    "build": "next build",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev --port 8000\"",
+    "build": "tinacms build && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup:users": "tinacms-next-auth setup"
   },
   "dependencies": {
     "@mantine/core": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
+    "@tinacms/datalayer": "^1.2.33",
     "next": "^14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tinacms": "^1.6.0",
+    "tinacms-authjs": "^2.0.0",
+    "tinacms-gitprovider-github": "^1.0.4",
+    "upstash-redis-level": "^1.1.1"
   },
   "devDependencies": {
+    "@tinacms/cli": "^1.5.42",
     "@types/node": "^20.11.27",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
