--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@mantine/core": "^7.6.1",
-		"@mantine/hooks": "^7.6.1",
+		"@mantine/core": "^7.7.0",
+		"@mantine/hooks": "^7.7.0",
 		"@tinacms/datalayer": "^1.2.33",
-		"next": "^14.1.3",
+		"@tinacms/toolkit": "^1.7.13",
+		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
