--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@iconify/react": "^4.1.1",
+		"@iconify/utils": "^2.1.22",
 		"@mantine/core": "^7.7.0",
 		"@mantine/hooks": "^7.7.0",
 		"@mantine/utils": "^6.0.21",
