--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@iconify-icon/react": "^2.0.1",
 		"@iconify/react": "^4.1.1",
 		"@iconify/utils": "^2.1.22",
 		"@mantine/core": "^7.7.0",
 		"@mantine/hooks": "^7.7.0",
+		"@mantine/styles": "^6.0.21",
 		"@mantine/utils": "^6.0.21",
 		"@tinacms/datalayer": "^1.2.33",
 		"@tinacms/toolkit": "^1.7.13",
