--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
 		"setup:users": "tinacms-next-auth setup",
 		"start": "next start"
 	},
+	  "husky": {
+    		"hooks": {
+      			"pre-commit": "pnpm run lint && pnpm run format:check && pnpm run format",
+      			"pre-push": "pnpm run lint && pnpm run format:check && pnpm run format"
+    		}
+  	},
 	"dependencies": {
 		"@iconify-icon/react": "^2.0.1",
 		"@iconify/react": "^4.1.1",
@@ -20,6 +26,7 @@
 		"@mantine/utils": "^6.0.21",
 		"@tinacms/datalayer": "^1.2.33",
 		"@tinacms/toolkit": "^1.7.13",
+		"husky": "^9.0.11",
 		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
