--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
 		"format": "prettier -w -l .",
 		"lint": "next lint",
 		"setup:users": "tinacms-next-auth setup",
-		"start": "next start"
+		"start": "next start",
+		"prepare": "husky"
 	},
-	  "husky": {
-    		"hooks": {
-      			"pre-commit": "pnpm run lint && pnpm run format:check && pnpm run format",
-      			"pre-push": "pnpm run lint && pnpm run format:check && pnpm run format"
-    		}
-  	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pnpm run lint && pnpm run format:check && pnpm run format",
+			"pre-push": "pnpm run lint && pnpm run format:check && pnpm run format"
+		}
+	},
 	"dependencies": {
 		"@iconify-icon/react": "^2.0.1",
 		"@iconify/react": "^4.1.1",
@@ -26,7 +27,6 @@
 		"@mantine/utils": "^6.0.21",
 		"@tinacms/datalayer": "^1.2.33",
 		"@tinacms/toolkit": "^1.7.13",
-		"husky": "^9.0.11",
 		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
@@ -45,6 +45,7 @@
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.1.3",
+		"husky": "^9.0.11",
 		"postcss": "^8.4.35",
 		"prettier": "^3.2.5",
 		"prettier-plugin-jsdoc": "^1.3.0",
