Issue #33: Husky hook worked, now testing auto lint and format on commit

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
 		"dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
 		"format": "prettier -w -l .",
 		"lint": "next lint",
+		"prepare": "husky",
 		"setup:users": "tinacms-next-auth setup",
 		"start": "next start",
-		"prepare": "husky"
+		"test": "echo No tests yet!"
 	},
 	"husky": {
 		"hooks": {
