--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
 		"@mantine/utils": "^6.0.21",
 		"@tinacms/datalayer": "^1.2.33",
 		"@tinacms/toolkit": "^1.7.13",
+		"clsx": "^2.1.0",
 		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"tailwind-merge": "^2.2.2",
 		"tinacms": "^1.6.0",
 		"tinacms-authjs": "^2.0.0",
 		"tinacms-gitprovider-github": "^1.0.4",
