--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@iconify-icon/react": "^2.0.1",
+		"@tailwindcss/typography": "^0.5.12",
 		"@tinacms/cli": "^1.5.42",
 		"@types/node": "^20.11.27",
 		"@types/react": "^18.2.66",
