feat(carousel): created carousel component, updated types, ran linter, uploaded image

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@iconify-icon/react": "^2.0.1",
 		"@iconify/react": "^4.1.1",
 		"@iconify/utils": "^2.1.22",
+		"@mantine/carousel": "^7.7.1",
 		"@mantine/core": "^7.7.0",
 		"@mantine/hooks": "^7.7.0",
 		"@mantine/styles": "^6.0.21",
@@ -21,6 +22,8 @@
 		"@tinacms/datalayer": "^1.2.33",
 		"@tinacms/toolkit": "^1.7.13",
 		"clsx": "^2.1.0",
+		"embla-carousel-autoplay": "^7.1.0",
+		"embla-carousel-react": "^7.1.0",
 		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
