--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"format": "prettier -w -l .",
 		"lint": "next lint",
 		"setup:users": "tinacms-next-auth setup",
-		"start": "next start"
+		"start": "next start",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@iconify-icon/react": "^2.0.1",
@@ -23,6 +24,7 @@
 		"@tinacms/toolkit": "^1.7.13",
 		"clsx": "^2.1.0",
 		"embla-carousel-autoplay": "^7.1.0",
+		"husky": "^9.0.11",
 		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
