--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
 		"format": "prettier -w -l .",
 		"lint": "next lint",
+		"prepare": "husky",
 		"setup:users": "tinacms-next-auth setup",
-		"start": "next start",
-		"prepare": "husky"
+		"start": "next start"
 	},
 	"dependencies": {
 		"@iconify-icon/react": "^2.0.1",
@@ -24,7 +24,6 @@
 		"@tinacms/toolkit": "^1.7.13",
 		"clsx": "^2.1.0",
 		"embla-carousel-autoplay": "^7.1.0",
-		"husky": "^9.0.11",
 		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
@@ -45,6 +44,7 @@
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.1.3",
+		"husky": "^9.0.11",
 		"postcss": "^8.4.35",
 		"prettier": "^3.2.5",
 		"prettier-plugin-jsdoc": "^1.3.0",
