--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
 		"format": "prettier -w -l .",
 		"lint": "next lint",
+		"prepare": "husky",
 		"setup:users": "tinacms-next-auth setup",
 		"start": "next start"
 	},
@@ -43,6 +44,7 @@
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.1.3",
+		"husky": "^9.0.11",
 		"postcss": "^8.4.35",
 		"prettier": "^3.2.5",
 		"prettier-plugin-jsdoc": "^1.3.0",
