--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.2",
-		"tinacms": "^1.6.0",
-		"tinacms-authjs": "^2.0.0",
+		"tinacms": "2.4.0",
+		"tinacms-authjs": "7.0.0",
 		"tinacms-gitprovider-github": "^1.0.4",
 		"upstash-redis-level": "^1.1.1"
 	},
 	"devDependencies": {
 		"@iconify-icon/react": "^2.0.1",
 		"@tailwindcss/typography": "^0.5.12",
-		"@tinacms/cli": "^1.5.42",
+		"@tinacms/cli": "^1.6.6",
 		"@types/node": "^20.11.27",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
