--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"next": "^14.1.4",
 		"next-auth": "^4.24.7",
 		"react": "^18.2.0",
+		"react-country-flag": "^3.1.0",
 		"react-dom": "^18.2.0",
 		"tailwind-merge": "^2.2.2",
 		"tinacms": "2.4.0",
